--- a/tasks/noauto_remove_existing_installation_Debian.yml
+++ b/tasks/noauto_remove_existing_installation_Debian.yml
@@ -9,6 +9,6 @@
   block:
     - name: Remove existiing virtualbox guest utils
       ansible.builtin.apt:
-        name: "{{ virtualbox_guest_utils }}"
+        name: "{{ virtualbox_guest_pkgs }}"
         state: absent
       become: true
