--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -5,8 +5,12 @@ virtualbox_guest_dep_pkgs:
   - dkms
   - linux-headers-generic
 
-virtualbox_guest_utils:
+virtualbox_guest_pkgs:
+  - virtualbox-guest-additions-iso
+  - virtualbox-guest-dkms
+  - virtualbox-guest-source
   - virtualbox-guest-utils
   - virtualbox-guest-utils-nox
+  - virtualbox-guest-x11
 
 virtualbox_guest_installer: "VBoxLinuxAdditions.run"
