--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ virtualbox_guest_install_method: "download" # options: download, local
 virtualbox_guest_install_dir: "/opt/"
 virtualbox_guest_mount_path: "/media/cdrom"
 virtualbox_guest_installer_path: "{{ virtualbox_guest_mount_path }}/{{ virtualbox_guest_installer }}"
+virtualbox_guest_reboot: true
 
 # Variables for download option
 virtualbox_guest_download_url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_version }}/VBoxGuestAdditions_{{ virtualbox_version }}.iso"
