--- a/tasks/noauto_remove_existing_installation.yml
+++ b/tasks/noauto_remove_existing_installation.yml
@@ -14,6 +14,7 @@
         connect_timeout: 5
         reboot_timeout: 600
       become: true
+      when: virtualbox_guest_reboot
 
 # If virtualbox guest was installed headless, we need to remove the existing installation
 - name: Uninstall existing os packages of virtualbox guest additions
