--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-virtualbox_guest_virtualbox_version: 7.1.6
+virtualbox_guest_virtualbox_version: "7.1.6"
 
 virtualbox_guest_install_method: "download" # options: download, local
 virtualbox_guest_install_dir: "/opt/"
@@ -8,7 +8,7 @@ virtualbox_guest_installer_path: "{{ virtualbox_guest_mount_path }}/{{ virtualbo
 virtualbox_guest_reboot: true
 
 # Variables for download option
-virtualbox_guest_download_url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_guest_virtualbox_version }}/VBoxGuestAdditions_{{ virtualbox_version }}.iso"
+virtualbox_guest_download_url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_guest_virtualbox_version }}/VBoxGuestAdditions_{{ virtualbox_guest_virtualbox_version }}.iso"
 virtualbox_guest_download_path: "{{ ansible_env.HOME }}/{{ virtualbox_guest_download_url | basename }}"
 virtualbox_guest_download_iso_cleanup: true
 # Variables for local option
