--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,9 +4,10 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["^defaults/main\\.yml$"],
+      "fileMatch": ["^defaults/main\\.yml$", "^.github/workflows/ci\\.yml$"],
       "matchStrings": [
-        "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\"",
+        "VBOX_VERSION:\\s+\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "custom.virtualbox",
       "depNameTemplate": "virtualbox",
