--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,7 +13,8 @@
       "customType": "regex",
       "managerFilePatterns": [
         "/^defaults/main\\.yml$/",
-        "/^.github/workflows/ci\\.yml$/"
+        "/^.github/workflows/ci\\.yml$/",
+        "/^vars/molecule\\.yml$/"
       ],
       "matchStrings": [
         "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\"",
@@ -26,10 +27,12 @@
     {
       "customType": "regex",
       "managerFilePatterns": [
-        "/^.github/workflows/ci\\.yml$/"
+        "/^.github/workflows/ci\\.yml$/",
+        "/^molecule/default/molecule\\.yml$/"
       ],
       "matchStrings": [
-        "vagrant_box:\\s+pluggero/debian12-ansible\\s+vagrant_box_version:\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "vagrant_box:\\s+pluggero/debian12-ansible\\s+vagrant_box_version:\\s+\"(?<currentValue>[\\d\\.]+)\"",
+        "box_version:\\s+\"\\$\\{MOLECULE_VAGRANT_BOX_VERSION:-(?<currentValue>[\\d\\.]+)\\}\""
       ],
       "datasourceTemplate": "github-tags",
       "depNameTemplate": "pluggero/packer-debian12-ansible",
