fix: Implemented fstab cleanup

--- a/tasks/noauto_install_dep_Archlinux.yml
+++ b/tasks/noauto_install_dep_Archlinux.yml
@@ -14,6 +14,9 @@
 
     - name: Ensure virtualbox guest additions dependencies are installed
       community.general.pacman:
-        name: "{{ virtualbox_guest_dep_pkgs }}"
+        name: "{{ package }}"
         state: present
+        loop: "{{ virtualbox_guest_dep_pkgs }}"
+        loop_control:
+        loop_var: package
       become: true
