--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@ virtualbox_guest_virtualbox_version: "7.1.8"
 
 virtualbox_guest_install_method: "download" # options: download, local
 virtualbox_guest_install_dir: "/opt/"
-virtualbox_guest_mount_path: "/media/cdrom"
+virtualbox_guest_mount_path: "/mnt/vbox_guest_additions"
 virtualbox_guest_installer_path: "{{ virtualbox_guest_mount_path }}/{{ virtualbox_guest_installer }}"
 virtualbox_guest_reboot: true
 
