--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,10 +3,24 @@
     "config:best-practices",
     ":disableRateLimiting"
   ],
+  "automerge": false,
+  "automergeType": "pr",
+  "packageRules": [
+    {
+      "matchManagers": ["github-actions", "pip_requirements"],
+      "automerge": true,
+      "automergeType": "pr"
+    },
+    {
+      "matchManagers": ["custom.regex", "ansible-galaxy"],
+      "automerge": false
+    }
+  ],
   "enabledManagers": [
     "github-actions",
     "pip_requirements",
-    "custom.regex"
+    "custom.regex",
+    "ansible-galaxy"
   ],
   "assignees": ["pluggero"],
   "customManagers": [
@@ -57,13 +71,5 @@
       "defaultRegistryUrlTemplate": "https://download.virtualbox.org/virtualbox/LATEST-STABLE.TXT",
       "format": "plain"
     }
-  },
-  "packageRules": [
-    {
-      "matchPackageNames": [
-        "virtualbox"
-      ],
-      "groupName": "Update Virtualbox version"
-    }
-  ]
+  }
 }
