fix: Fixed molecule ssh timeout

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -57,10 +57,12 @@
     - name: Reboot system
       ansible.builtin.reboot:
         msg: "Rebooting system after Guest Additions maintenance..."
-        connect_timeout: 30
+        connect_timeout: 60
         reboot_timeout: 900
         test_command: uptime
         pre_reboot_delay: 5
-        post_reboot_delay: 15
+        post_reboot_delay: 30
       become: true
+      retries: 3
+      delay: 10
       when: virtualbox_guest_additions_installed_version != "none"
