--- a/tasks/noauto_remove_existing_installation.yml
+++ b/tasks/noauto_remove_existing_installation.yml
@@ -11,9 +11,14 @@
     - name: Reboot system
       ansible.builtin.reboot:
         msg: "Rebooting system for clean uninstallation"
-        connect_timeout: 5
-        reboot_timeout: 600
+        connect_timeout: 120
+        reboot_timeout: 1200
+        test_command: whoami
+        pre_reboot_delay: 5
+        post_reboot_delay: 60
       become: true
+      retries: 5
+      delay: 30
       when: virtualbox_guest_reboot
 
 # If virtualbox guest was installed headless, we need to remove the existing installation
