fix: Fixed timing issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,18 +40,13 @@ jobs:
           working_directory: "pluggero.virtualbox_guest"
           requirements_file: "requirements.yml"
 
-  molecule:
-    name: Molecule
+  molecule-debian:
+    name: Molecule (Debian 12)
     runs-on: ubuntu-latest
     needs: lint
-    strategy:
-      matrix:
-        include:
-          - vagrant_box: debian12
-            vagrant_box_version: "1.4.0"
-          - vagrant_box: archlinux
-            vagrant_box_version: "1.4.0"
     env:
+      MOLECULE_VAGRANT_BOX: debian12
+      MOLECULE_VAGRANT_BOX_VERSION: "1.4.0"
       VBOX_BRANCH: "7.1"
       VBOX_VERSION: "7.1.12"
       # The build ID can be found in the URL of the VirtualBox iso file: https://download.virtualbox.org/virtualbox/
@@ -124,13 +119,99 @@ jobs:
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
-          MOLECULE_VAGRANT_BOX: ${{ matrix.vagrant_box }}
-          MOLECULE_VAGRANT_BOX_VERSION: ${{ matrix.vagrant_box_version }}
 
       - name: Upload screenshot if exists
         if: always()
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
-          name: vm-screenshot-${{ env.TIMESTAMP }}
+          name: vm-screenshot-debian12-${{ env.TIMESTAMP }}
+          path: /tmp/vm-screenshot-${{ env.TIMESTAMP }}.png
+          if-no-files-found: ignore
+
+  molecule-archlinux:
+    name: Molecule (Arch Linux)
+    runs-on: ubuntu-latest
+    needs: molecule-debian
+    env:
+      MOLECULE_VAGRANT_BOX: archlinux
+      MOLECULE_VAGRANT_BOX_VERSION: "1.4.0"
+      VBOX_BRANCH: "7.1"
+      VBOX_VERSION: "7.1.12"
+      # The build ID can be found in the URL of the VirtualBox iso file: https://download.virtualbox.org/virtualbox/
+      VBOX_BUILD_ID: "169651"
+      VBOX_DEB_DISTRO: "Ubuntu"
+      VBOX_DEB_CODENAME: "noble"
+
+    steps:
+      - name: Check out the codebase
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        with:
+          path: "pluggero.virtualbox_guest"
+
+      - name: Set up Python 3
+        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6
+        with:
+          python-version: "3.x"
+
+      - name: Install test dependencies
+        run: pip3 install -r requirements.txt
+
+      - name: Construct VBOX_DEB_URL
+        run: |
+          export VBOX_DEB_FILE="virtualbox-${VBOX_BRANCH}_${VBOX_VERSION}-${VBOX_BUILD_ID}~${VBOX_DEB_DISTRO}~${VBOX_DEB_CODENAME}_amd64.deb"
+          export VBOX_DEB_URL="https://download.virtualbox.org/virtualbox/${VBOX_VERSION}/${VBOX_DEB_FILE}"
+          echo "VBOX_DEB_URL=$VBOX_DEB_URL" >> $GITHUB_ENV
+
+      - name: Install VirtualBox
+        run: |
+          wget -O- https://www.virtualbox.org/download/oracle_vbox_2016.asc \
+            | sudo gpg --dearmor --yes --output /usr/share/keyrings/oracle-virtualbox-2016.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] \
+            http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib" \
+            | sudo tee /etc/apt/sources.list.d/virtualbox.list
+          sudo apt update
+          sudo apt install -y linux-headers-$(uname -r) dkms
+          wget ${{ env.VBOX_DEB_URL }} -O /tmp/virtualbox.deb
+          sudo apt install -y /tmp/virtualbox.deb
+
+      - name: Verify VirtualBox installation
+        run: VBoxManage --version
+
+      - name: install vagrant
+        run: |
+          wget -O- https://apt.releases.hashicorp.com/gpg \
+            | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
+            https://apt.releases.hashicorp.com $(lsb_release -cs) main" \
+            | sudo tee /etc/apt/sources.list.d/hashicorp.list
+          sudo apt update
+          sudo apt install -y vagrant
+
+      - name: Verify Vagrant installation
+        run: vagrant --version
+
+      - name: Generate timestamp
+        run: echo "TIMESTAMP=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_ENV
+
+      - name: Start screenshot timer in background
+        run: |
+          nohup bash -c '
+          sleep 480
+          VM_ID=$(VBoxManage list runningvms | head -n1 | cut -d "\"" -f2)
+          echo "Taking screenshot of $VM_ID"
+          VBoxManage controlvm "$VM_ID" screenshotpng "/tmp/vm-screenshot-${TIMESTAMP}.png"
+          ' &
+
+      - name: Run Molecule tests
+        run: molecule test
+        env:
+          PY_COLORS: "1"
+          ANSIBLE_FORCE_COLOR: "1"
+
+      - name: Upload screenshot if exists
+        if: always()
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        with:
+          name: vm-screenshot-archlinux-${{ env.TIMESTAMP }}
           path: /tmp/vm-screenshot-${{ env.TIMESTAMP }}.png
           if-no-files-found: ignore
