--- a/tasks/01_install.yml
+++ b/tasks/01_install.yml
@@ -4,11 +4,11 @@
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "{{ var_file }}"
       with_first_found:
-        - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-        - "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-        - "{{ ansible_distribution }}.yml"
-        - "{{ ansible_os_family }}.yml"
-        - "{{ ansible_lsb.id }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_distribution }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_os_family }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_lsb.id }}.yml"
       loop_control:
         loop_var: var_file
 
