--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -33,11 +33,21 @@
     {
       "customType": "regex",
       "managerFilePatterns": [
-        "/^defaults/main\\.yml$/",
+        "/^defaults/main\\.yml$/"
+      ],
+      "matchStrings": [
+        "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\""
+      ],
+      "datasourceTemplate": "custom.virtualbox",
+      "depNameTemplate": "virtualbox",
+      "versioningTemplate": "semver"
+    },
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
         "/^.github/workflows/ci\\.yml$/"
       ],
       "matchStrings": [
-        "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\"",
         "VBOX_VERSION:\\s+\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "custom.virtualbox",
