--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -39,7 +39,7 @@
         "virtualbox_guest_virtualbox_version:\\s+\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "custom.virtualbox",
-      "depNameTemplate": "virtualbox",
+      "depNameTemplate": "virtualbox-role",
       "versioningTemplate": "semver"
     },
     {
@@ -51,7 +51,7 @@
         "VBOX_VERSION:\\s+\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "custom.virtualbox",
-      "depNameTemplate": "virtualbox",
+      "depNameTemplate": "virtualbox-ci",
       "versioningTemplate": "semver"
     },
     {
