--- a/tasks/noauto_uninstall.yml
+++ b/tasks/noauto_uninstall.yml
@@ -1,6 +1,17 @@
 ---
 - name: Uninstall current installation of VirtualBox Guest Additions
   block:
+    - name: Uninstall VirtualBox Guest Additions OS-specifically from package manager
+      ansible.builtin.include_tasks: "{{ task_file }}"
+      with_first_found:
+        - "{{ role_path }}/tasks/noauto_uninstall_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/tasks/noauto_uninstall_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/tasks/noauto_uninstall_{{ ansible_distribution }}.yml"
+        - "{{ role_path }}/tasks/noauto_uninstall_{{ ansible_os_family }}.yml"
+        - "{{ role_path }}/tasks/noauto_uninstall_{{ ansible_lsb.id }}.yml"
+      loop_control:
+        loop_var: task_file
+
     - name: Uninstall VirtualBox Guest Additions from source
       ansible.builtin.include_tasks: noauto_uninstall_source.yml
       when: virtualbox_guest_installed_version is defined and virtualbox_guest_installed_version != ""
