--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,5 @@ virtualbox_guest_reboot: true
 virtualbox_guest_download_url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_guest_virtualbox_version }}/VBoxGuestAdditions_{{ virtualbox_guest_virtualbox_version }}.iso"
 virtualbox_guest_download_path: "{{ ansible_env.HOME }}/{{ virtualbox_guest_download_url | basename }}"
 virtualbox_guest_download_iso_cleanup: true
+
+virtualbox_guest_hypervisor: "{{ ansible_virtualization_type | default('unknown') }}"
